# lge-cockpit

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.claude/rules/: i18n-parity.md  sqlite-migration.md  subprocess-shell-escape.md  tauri-command-flow.md  version-sync.md  zustand-store-conventions.md
docs/adr/: 001-jira-direct-api-over-mcp.md  002-non-technical-ui-language.md  003-language-simplification-round-2.md
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_git_branch.sql  003_settings.sql  004_worktrees.sql  005_shell_env.sql  006_task_attachments.sql  007_attachment_phases_multi.sql  008_jira_base_url.sql
src-tauri/prompts/: builder.md  guardian.md  planning.md  review.md
src-tauri/src/: claude_invocation.rs  commit_message_runner.rs  lib.rs  phase_runner.rs
src-tauri/src/commands/: arch_diff.rs  attachments.rs  claude_utils.rs  git.rs  health.rs  jira.rs  lge.rs  mod.rs  repositories.rs  settings.rs  tasks.rs
src-tauri/src/db/: queries.rs  schema.rs
src-tauri/src/diff_analysis/: mod.rs
src-tauri/src/diff_analysis/fixtures/: cargo_toml_added_dep.txt  package_json_added_dep.txt
src-tauri/src/jira/: client.rs  converter.rs  mod.rs
src-tauri/src/models/: arch_diff.rs  attachment.rs  delete.rs  lge.rs  mod.rs  phase.rs  repository.rs  task.rs
src-tauri/src/settings/: mod.rs
src/data/: releaseNotes.ts
src/demo/: demoArtifacts.ts  demoStore.ts  (+1 more)
(+48 files in other folders)
